--- a/reading.html
+++ b/reading.html
@@ -45,7 +45,8 @@
 <li>Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href="/../notes/hhgtg">Notes</a>)</li>
 <li>Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (<a href="/../notes/brave-new-world">Notes</a>)</li>
 <li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus (<a href="/../notes/the-stranger">Notes</a>)</li>
-<li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
+<li>Feb 5 &ndash;&nbsp;<strong>The 
+  </strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
 <li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
 <li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov</li>
 <li>Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
@@ -54,7 +55,7 @@
 <li>Mar 19 &ndash;&nbsp;<strong>Animal Farm</strong>&nbsp;by George Orwell</li>
 <li>Mar 26 &ndash;&nbsp;<strong>Man&rsquo;s Search for Meaning</strong>&nbsp;by Victor Frankel</li>
 <li>Apr 2 &ndash;&nbsp;<strong>The Giver</strong>&nbsp;by Lois Lowry</li>
-<li>Apr 9 &ndash;&nbsp;<strong>Metamorphosis, Hunger Artist</strong>&nbsp;by Franz Kafka</li>
+<li>Apr 9 &ndash;&nbsp;<strong>Metamorphosis</strong>&nbsp;by Franz Kafka</li>
 <li>Apr 16 &ndash;&nbsp;<strong>The Plague</strong>&nbsp;by Camus</li>
 <li>Apr 23 &ndash;&nbsp;<strong>Player of Games</strong>&nbsp;by Ian Banks</li>
 <li>Apr 30 &ndash;&nbsp;<strong>Fight Club</strong>&nbsp;by Chuck Palahniuk</li>
@@ -64,7 +65,7 @@
 <li>May 28 &ndash;&nbsp;<strong>Dune</strong>&nbsp;by Frank Herbert</li>
 <li>Jun 4 &ndash;&nbsp;<strong>Frankenstein</strong>&nbsp;by Mary Shelley</li>
 <li>Jun 11 &ndash; <strong><strong><strong><strong><strong><strong><strong><strong>The Wealth of Nations</strong></strong></strong></strong></strong></strong></strong></strong> by Adam Smith</li>
-<li>Jun 18 &ndash; <strong>The Alchemist</strong>&nbsp;by Paulo Coelho</li>
+<li>Jun 18 &ndash; <strong>The Road</strong>&nbsp;by Cormac McCarthy</li>
 <li>Jun 25 &ndash; <strong>Candide</strong> by Voltaire</li>
 <li>Jul 2 &ndash; <strong>2001: A Space Odyssey</strong>&nbsp;by Arthur C Clarke</li>
 <li>Jul 9 &ndash; <strong>Of Mice and Men</strong> by John Steinbeck</li>
@@ -85,7 +86,7 @@
 <li>Oct 22 &ndash;&nbsp;<strong>The Prince</strong>&nbsp;by Machiavelli</li>
 <li>Oct 29 &ndash;&nbsp;<strong>Fahrenheit 451</strong>&nbsp;by Ray Bradbury</li>
 <li>Nov 5 &ndash;&nbsp;<strong>Disgrace</strong>&nbsp;by J. M. Coetzee</li>
-<li>Nov 12 &ndash;&nbsp;<strong>Flowers for Algernon</strong>&nbsp;by Daniel Keyes</li>
+<li>Nov 12 &ndash;&nbsp;<strong>Never Let Me Go</strong>&nbsp;by Kazuo Ishiguro</li>
 <li>Nov 19 &ndash;&nbsp;<strong>I, Robot</strong>&nbsp;by Isaac Asimov</li>
 <li>Nov 26 &ndash;&nbsp;<strong>The Dead</strong>&nbsp;by James Joyce</li>
 <li>Dec 3 &ndash;&nbsp;<strong>The Book of Five Rings</strong>&nbsp;by Miyamoto Musashi</li>
@@ -94,7 +95,20 @@
 <li>Dec 24 &ndash;&nbsp;T<strong><strong>he Outsiders</strong></strong> by&nbsp;S.E. Hinton</li>
 <li>Dec 31 &ndash;&nbsp;<strong><strong>The Catcher in the Rye</strong></strong> by J. D. Salinger</li>
 </ul>
-<p>Additionally, there are some essays I&rsquo;d love to read but I&rsquo;m not sure when I&rsquo;ll tackle them:</p>
+<p>Other books I'm interested in:</p>
+<ul>
+<li>The Color Purple by Alice Walker</li>
+<li>Pachinko by Min Jin Lee</li>
+<li>The Brief Wondrous Life of Oscar Wao by Junot D&iacute;az</li>
+<li>The Left Hand of Darkness by Ursula K. Le Guin</li>
+<li>A Fine Balance by Rohinton Mistry</li>
+<li>Beloved by Toni Morrison</li>
+<li>The Wind-Up Bird Chronicle by Haruki Murakami</li>
+<li>White Teeth by Zadie Smith</li>
+<li>The Water Dancer by Ta-Nehisi Coates</li>
+<li>The House of the Spirits by Isabel Allende</li>
+</ul>      
+<p>Additionally, here are some essays I&rsquo;d love to read but I&rsquo;m not sure when I&rsquo;ll tackle them:</p>
 <ul>
 <li><strong>Michel de Montaigne&rsquo;s</strong> library of essays</li>
 <li><strong>Paul Graham&rsquo;s</strong> library of essays</li>
