--- a/reading.html
+++ b/reading.html
@@ -48,7 +48,11 @@
 <li>Feb 5 &ndash;&nbsp;<strong>The 
   </strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
 <li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
-<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov</li>
+<li>Feb 19 &ndash;&nbsp;&lt;strong&gt;Foundation&lt;/strong&gt;&nbsp;by Isaac Asimov
+<ul>
+<li>I went down a rabbit hole and read the rest of The Foundation series which also included Foundation and Empire, Second Foundation, Foundation&rsquo;s Edge, and Foundation and Earth.</li>
+</ul>
+</li>
 <li>Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
 <li>Mar 5 &ndash;&nbsp;<strong>Old Man and The Sea</strong>&nbsp;by Hemingway</li>
 <li>Mar 12 &ndash;&nbsp;<strong>The Unbearable Lightness of Being</strong> by Milan Kundera</li>
