--- a/reading.html
+++ b/reading.html
@@ -45,8 +45,7 @@
 <li>Jan 15 &ndash;&nbsp;<strong>Hitchhiker&rsquo;s Guide to the Galaxy</strong>&nbsp;by Douglas Adams (<a href="/../notes/hhgtg">Notes</a>)</li>
 <li>Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (<a href="/../notes/brave-new-world">Notes</a>)</li>
 <li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus (<a href="/../notes/the-stranger">Notes</a>)</li>
-<li>Feb 5 &ndash;&nbsp;<strong>The 
-  </strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
+<li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
 <li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
 <li>Feb 19 &ndash;&nbsp;&lt;strong&gt;Foundation&lt;/strong&gt;&nbsp;by Isaac Asimov
 <ul>
