--- a/notes/the-alchemist.html
+++ b/notes/the-alchemist.html
@@ -38,34 +38,62 @@
     Notes
   </small>
   <h1 class="title">
-    Rediscovering my Personal Legend: A Review of Coelho's The Alchemist
+    Book Review: The Alchemist by Paolo Coelho
   </h1>
+  <div class="container">
+    <small class="grid eight description">
+      A tale of hope, destiny, and love
+    </small>
+  </div>    
 </div>
 <article style="margin-top: 30px;">
 
 <blockquote>
-<p>&ldquo;It's true that everything has its Personal Legend, but one day that Personal Legend will be realized. So each thing has to transform itself into something better, and to acquire a new Personal Legend, until, someday, the Soul of the World becomes one thing only.&rdquo;</p>
+<p>"Your dream is worth fighting for, and while you're not in control of what life throws at you, you are in control of the fight." - Rachel Hollis</p>
 </blockquote>
-<p>The Alchemist by Paulo Coelho is a celebration of the human spirit, a story that tugs at your heart strings and inspires you to go after your personal legend. It follows the journey of Santiago, a shepherd boy who dreams of a life beyond the pasture. After consulting with a fortune teller about a recurring dream about finding treasury, he decides to embark on a journey to look for the treasure and discovers himself along the way.</p>
-<p>Throughout the story, Santiago encounters many characters and situations that put his courage to the test, broaden his perspective, and teach him valuable lessons about love, bravery, and the power of listening to your heart. While he does end up finding an actual treasure, I think the true treasure was actually the person he becomes.</p>
-<p>This book holds a special place in my heart. It&rsquo;s been a constant source of inspiration for me at different stages of my life. As a teenager, it filled me with hope and excitement. In my 20s, it challenged me to prove myself to the world and gave me the courage to transform into the person I wanted to be. Which was not a particularly easy thing to do for someone who grew up in the 90s and was very afraid of &ldquo;selling out&rdquo;.</p>
-<p>Now in my 30s, it reminds me to never give up and to hold onto the dreams of my past. As a father, I related to Santiago's struggle to balance his journey with the comfort of stability in the Oasis. After my son Marcos was born, my priorities changed and I found there were just some things I wasn&rsquo;t willing to do anymore to achieve my goals (e.g. working long hours, putting up with high amounts of stress, giving up my weekends to take on extra projects).</p>
-<p>I just want to be a huge part of my son&rsquo;s life for as long as I can. I want him to know that I&rsquo;ll always be there for him and I think the best way I can do that is by being physically present and spending a lot of time building a deep connection with him. That&rsquo;s been my number one priority for the last four years, something way more important to me than any personal legend has ever been.</p>
-<p>Reading this book was healthy for me because it reminded me to find balance. As much as I want to be there for my son, I also want him to grow up knowing that he&rsquo;s capable of achieving anything in life and that his dreams are within reach if he&rsquo;s willing to pursue them. I think it&rsquo;s important that I do that by living life to the fullest and never giving up on my dreams.</p>
-<p>It&rsquo;s taken me the better part of two years to get to the point where I can have that realization. I didn&rsquo;t realize how much of an impact the pandemic had on my mental health until it was too late. After feeling lost in depression for a bit, I&rsquo;m grateful to be feeling like my normal self again. I am back to exercising, eating healthy, writing, and taking big swings towards my goals.</p>
-<p>This book came back into my life at the exact right time. It&rsquo;s reconnected me with the passion for life I felt in my 20s and I once again feel driven to pursue my personal legend, this time while balancing the responsibilities to my family.</p>
-<p>I guess it&rsquo;s true what the author says in the book: &ldquo;When you want something, all the universe conspires in helping you to achieve it.&rdquo; This past year, I worked really hard to get myself back on track physically and mentally. Perhaps reading this book was the universe&rsquo;s way of throwing me a bone and giving me the inspiration I needed to get me through that last little bump.</p>
-<p>And so, as I reflect upon the book, I&rsquo;m reminded to reach for the stars and never give up on my dreams. If you find yourself feeling as lost as I did after the pandemic, I hope you rediscover the love, joy, and peace within so that when you look back on your life, you can do so with pride knowing that you weathered the storms as Santiago did, and emerged strong and wiser for it.</p>
-<p>I&rsquo;ll leave you with this poem I was inspired to write (don't laugh at me lol):</p>  
-&nbsp;
-<p style="padding-left: 30px;"><em>So let the journey continue, for the road ahead is long and winding</em></p>
-<p style="padding-left: 30px;"><em>With the wind at our backs and the fire in our hearts, let us march on</em></p>
-<p style="padding-left: 30px;"><em>For the true treasure lies not in the destination, but in the journey itself</em></p>
-<p style="padding-left: 30px;"><em>With each step, we forge new paths and uncover hidden riches within</em></p>
-<p style="padding-left: 30px;"><em>With each breath, we grow stronger and wiser, our spirits lifted higher</em></p>
-<p style="padding-left: 30px;"><em>For life is a grand adventure, a never-ending quest for truth and beauty</em></p>
-<p style="padding-left: 30px;"><em>So let us sing with the birds, dance with the stars, and bask in the sun</em></p>
-<p style="padding-left: 30px;"><em>For the journey is ours, and the journey is glorious</em></p>
+<p>The Alchemist by Paulo Coelho is a heartwarming tale of self-discovery, perseverance, and embracing one's own destiny. The novel follows Santiago, a shepherd boy, as he embarks on a life-changing journey to find his personal legend. Along the way, he encounters wise mentors, daunting obstacles, and enlightening experiences that shape him into the person he was always meant to become.</p>
+<p>Santiago's adventure begins with a recurring dream of discovering treasure at the Egyptian Pyramids. With a fortune teller's advice and the belief that the universe conspires to help those who follow their hearts, he leaves the cozy familiarity of his shepherd life to chase his dream. Santiago's odyssey takes him across the desert, where he meets a motley crew of characters and learns about love, courage, and the power of listening to one's heart.</p>
+<p>It's the kind of story that grabs you by the heartstrings and doesn't let go, leaving you feeling like you just had a spiritual high-five with the universe.</p>
+<h2><strong>Characters</strong></h2>
+<ul>
+<li><strong>Santiago:</strong> The shepherd boy turned dream-chaser extraordinaire.</li>
+<li><strong>The Alchemist:</strong> The Yoda of the desert.</li>
+<li><strong>The King of Salem (Melchizedek):</strong> A king who's basically Santiago's personal cheerleader.</li>
+<li><strong>Fatima:</strong> The woman who steals Santiago's heart (and ours, too). We stan.</li>
+<li><strong>The Englishman:</strong> A bookish fellow traveler who's got a thirst for knowledge.</li>
+<li><strong>The Crystal Merchant:</strong> A savvy merchant who schools Santiago, but in my opinion, Santiago is the one that teaches him about business and life.</li>
+<li><strong>The Camel Driver:</strong> A wise man Santiago meets in the desert who shares life lessons and becomes a mentor.</li>
+</ul>
+<h2><strong>Key Takeaways</strong></h2>
+<ul>
+<li>Embrace your personal legend and let it be your North Star.</li>
+<li>Trust the universe to have your back when chasing your dreams.</li>
+<li>Love fearlessly, like you're dancing with the stars.</li>
+<li>Dare to be courageous when pursuing your dreams.</li>
+<li>Enjoy the journey, because that's where the magic happens.</li>
+</ul>
+<h2><strong>Personal Reflection</strong></h2>
+<p>The Alchemist is like a warm hug from an old friend, gently reminding me that it's never too late to chase my dreams and that I can balance both family life and personal ambition. Santiago's journey resonates with me on a deeply personal level. As a father, I can't help but admire his tenacity and commitment to his personal legend, even when he's pulled in different directions by love and duty.</p>
+<p>There's a certain magic to this book that I can't quite put my finger on. It's like Paulo Coelho has bottled up the essence of hope, perseverance, and self-discovery and woven it into a story that touches the heart and stirs the soul. Every time I read The Alchemist, I find myself seeing the world through a new lens, as if Coelho has given me the keys to unlocking a hidden depth of understanding and empathy.</p>
+<p>The book's themes of following your heart and trusting in the universe have been a profound source of comfort for me during times of uncertainty. In a world where it's easy to feel lost, The Alchemist is a gentle reminder that we all have a purpose and that our dreams are worth pursuing, no matter how far-fetched they may seem.</p>
+<p>I also find myself moved by the idea that we all have the power to shape our own destiny. Santiago's journey teaches us that if we're willing to listen to our hearts and embrace the opportunities that come our way, we can manifest the life we've always dreamed of. This idea has been a guiding principle in my own life and has inspired me to take risks and embrace change, even when it's terrifying.</p>
+<p>In short, The Alchemist has left an indelible mark on my life. It's a book that I return to time and time again, each reading bringing with it a new wave of insights and inspiration. I can't imagine my life without this magical story, and I'm forever grateful for the wisdom and encouragement it has given me throughout the years.</p>
+<h2><strong>Recommendation</strong></h2>
+<p>The Alchemist is an absolute must-read. If you haven't yet had the pleasure of joining Santiago on his epic journey, I urge you to fix that immediately. Paulo Coelho's captivating storytelling is sure to draw you in from the first page, and his exploration of the human spirit is both heartwarming and thought-provoking.</p>
+<p>The Alchemist is the kind of story that lingers in your thoughts long after you've turned the last page, gently nudging you towards self-discovery and growth. But fair warning: it isn't a book you can just skim through. This is a book deserves your full attention, so be prepared to give it the time and focus it deserves.</p>
+<p>Not going to lie, it&rsquo;s a 10/10 for me.</p>
+<h2>Interest <strong>quotes from the story</strong></h2>
+<ul>
+<li>"It's the possibility of having a dream come true that makes life interesting."</li>
+<li>"There is only one thing that makes a dream impossible to achieve: the fear of failure."</li>
+<li>"When we love, we always strive to become better than we are. When we strive to become better than we are, everything around us becomes better too."</li>
+<li>"The simple things are also the most extraordinary things, and only the wise can see them."</li>
+<li>"Every search begins with beginner's luck. And every search ends with the victor's being severely tested."</li>
+<li>"Tell your heart that the fear of suffering is worse than the suffering itself. And that no heart has ever suffered when it goes in search of its dreams because every second of the search is a second's encounter with God and with eternity."</li>
+<li>"We are travelers on a cosmic journey, stardust, swirling and dancing in the eddies and whirlpools of infinity. Life is eternal. We have stopped for a moment to encounter each other, to meet, to love, to share. This is a precious moment. It is a little parenthesis in eternity."</li>
+<li>"Everything that happens once can never happen again. But everything that happens twice will surely happen a third time."</li>
+<li>"When each day is the same as the next, it's because people fail to recognize the good things that happen in their lives every time the sun rises."</li>
+</ul>
   
  </article>
 
