--- a/reading.html
+++ b/reading.html
@@ -47,7 +47,7 @@
 <li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus (<a href="/../notes/the-stranger">Notes</a>)</li>
 <li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
 <li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
-<li>Feb 19 &ndash;&nbsp;&lt;strong&gt;Foundation&lt;/strong&gt;&nbsp;by Isaac Asimov
+<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov
 <ul>
 <li>I went down a rabbit hole and read the rest of The Foundation series which also included Foundation and Empire, Second Foundation, Foundation&rsquo;s Edge, and Foundation and Earth.</li>
 </ul>
