--- a/reading.html
+++ b/reading.html
@@ -49,7 +49,10 @@
 <li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
 <li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov
 <ul>
-<li>I went down a rabbit hole and read the rest of The Foundation series which also included Foundation and Empire, Second Foundation, Foundation&rsquo;s Edge, and Foundation and Earth.</li>
+  <li>Foundation and Empire</li>
+  <li>Second Foundation</li>
+  <li>Foundation&rsquo;s Edge</li>
+  <li>Foundation and Earth</li>
 </ul>
 </li>
 <li>Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
@@ -67,7 +70,7 @@
 <li>May 21 &ndash;&nbsp;<strong>Siddhartha</strong>&nbsp;by Herman Hesse</li>
 <li>May 28 &ndash;&nbsp;<strong>Dune</strong>&nbsp;by Frank Herbert</li>
 <li>Jun 4 &ndash;&nbsp;<strong>Frankenstein</strong>&nbsp;by Mary Shelley</li>
-<li>Jun 11 &ndash; <strong><strong><strong><strong><strong><strong><strong><strong>The Wealth of Nations</strong></strong></strong></strong></strong></strong></strong></strong> by Adam Smith</li>
+<li>Jun 11 &ndash; <strong>The Wealth of Nations</strong></strong>nbsp;by Adam Smith</li>
 <li>Jun 18 &ndash; <strong>The Road</strong>&nbsp;by Cormac McCarthy</li>
 <li>Jun 25 &ndash; <strong>Candide</strong> by Voltaire</li>
 <li>Jul 2 &ndash; <strong>2001: A Space Odyssey</strong>&nbsp;by Arthur C Clarke</li>
