--- a/reading.html
+++ b/reading.html
@@ -46,8 +46,8 @@
 <li>Jan 22 &ndash;&nbsp;<strong>Brave New World</strong>&nbsp;by Aldous Huxley (<a href="/../notes/brave-new-world">Notes</a>)</li>
 <li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus (<a href="/../notes/the-stranger">Notes</a>)</li>
 <li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
-<li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li>
-<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov
+<li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac</li> (<a href="/../notes/on-the-road">Notes</a>)</li>
+<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov (<a href="/../notes/foundation">Notes</a>)
 <ul>
   <li>Foundation and Empire</li>
   <li>Second Foundation</li>
