--- a/reading.html
+++ b/reading.html
@@ -47,15 +47,8 @@
 <li>Jan 29 &ndash;&nbsp;<strong>The Stranger</strong>&nbsp;by Camus (<a href="/../notes/the-stranger">Notes</a>)</li>
 <li>Feb 5 &ndash;&nbsp;<strong>The Alchemist</strong>&nbsp;by Paulo Coelho (<a href="/../notes/the-alchemist">Notes</a>)</li>
 <li>Feb 12 &ndash;&nbsp;<strong>On the Road</strong>&nbsp;by Jack Kerouac (<a href="/../notes/on-the-road">Notes</a>)</li>
-<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov (<a href="/../notes/foundation">Notes</a>)
-<ul>
-  <li>Foundation and Empire</li>
-  <li>Second Foundation</li>
-  <li>Foundation&rsquo;s Edge</li>
-  <li>Foundation and Earth</li>
-</ul>
-</li>
-<li>Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu</li>
+<li>Feb 19 &ndash;&nbsp;<strong>Foundation</strong>&nbsp;by Isaac Asimov (<a href="/../notes/foundation">Notes</a>)</li>
+<li>Feb 26 &ndash;&nbsp;<strong>The Art of War</strong>&nbsp;by Sun Tzu (<a href="/../notes/the-art-of-war">Notes</a>)</li>
 <li>Mar 5 &ndash;&nbsp;<strong>Old Man and The Sea</strong>&nbsp;by Hemingway</li>
 <li>Mar 12 &ndash;&nbsp;<strong>The Unbearable Lightness of Being</strong> by Milan Kundera</li>
 <li>Mar 19 &ndash;&nbsp;<strong>Animal Farm</strong>&nbsp;by George Orwell</li>
