--- a/index.html
+++ b/index.html
@@ -34,25 +34,19 @@
     </div>
     <main>
       
-<h1 id="hi-there-i-m-eduardo">Hello! I'm Eduardo!</h1>
-<p>I&rsquo;m a <a href="https://linkedin.com/iam/eduardolopez">marketing director</a> and author of the <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter. I currently lead product marketing at Lithic, a fintech startup that builds card issuing and banking APIs.</p>
-<p>This blog is where I'll share my essays, notes, and what I'm reading. Connect with me on <a href="https://twitter.com/fintechgtm">Twitter</a>, <a href="https://linkedin.com/in/iameduardolopez">LinkedIn</a>, <a href="https://medium.com/@fintechgtm">Medium</a>.</p>
-<h2><strong>About Me</strong></h2>
-<p>Marketing leader with 12+ years of experience leading product marketing, content, and demand generation at B2B tech companies. I&rsquo;ve built the marketing function at four startups ranging from Series A to Series C, and have led large global teams at Omnicom. In 2022, I was named one of the top 100 product marketing influencers by the Product Marketing Alliance.</p>
-<p>Earlier in my career, I co-founded two companies: a fintech marketing firm that I grew to over $1.3 million in revenue and a blockchain analysis startup. Before marketing, I worked in behavior analysis and worked with children on the Autism spectrum.</p>
-<ul>
-<li><strong>Location:</strong> Austin, Texas</li>
-<li><strong>Interests:</strong> GTM strategy, Fintech, Payment Systems</li>
-<li><strong>Sample Articles:</strong> <a href="https://fintechgtm.substack.com/p/payment-cards-deep-dive">Payment Cards</a>, <a href="https://www.elopez.net/essays/interchange-revenue">Interchange</a>, <a href="https://www.elopez.net/essays/digital-wallet-cards">Digital Wallets and Tokenized Cards</a>, <a href="https://www.elopez.net/essays/maximizing-interchange">Maximizing Interchange Revenue</a>, <a href="https://www.elopez.net/essays/fintech-bank-partnerships">Fintech Bank Partnerships</a>, <a href="https://www.lithic.com/blog/card-program-management">Card Program Management</a></li>
-</ul>
+<h1 id="hi-there-i-m-eduardo">Hello, I'm Eduardo.</h1>
+<p><a href="https://linkedin.com/iam/eduardolopez">Marketing Executive</a> focused on B2B software startups. Currently the Head of Marketing at <a href="https://sardine.ai">Sardine</a>, a company that makes fraud prevention and compliance software. I help early stage startups build growth engines. Have worked in fintech/payments for a long time.</p>
+<p>Previously co-founded two companies, led global marketing teams at Omnicom, and worked in behavior in behavior analytics.</p>
+<p>Have worked in fintech/payments for many years. Check out my <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter if you want to learn more about that space.</p>
 <h2><strong>Work History:</strong></h2>
 <ul>
-<li>Product Marketing Lead at Lithic (2022 - Present)</li>
-<li>Head of Product Marketing at Treasury Prime (2021 - 2022)</li>
-<li>Senior Product Marketing Manager at Fastspring (2020 - 2021)</li>
-<li>Product Marketing Manager at Paystand (2019 - 2020)</li>
-<li>Marketing Consultant / Owner at DH Labs (2017 - 2019)</li>
-<li>Marketing Director at Omnicom (2013 - 2017)</li>
+<li>Head of Marketing at Sardine</li>
+<li>Product Marketing Lead at Lithic</li>
+<li>Head of Product Marketing at Treasury Prime</li>
+<li>Senior Product Marketing Manager at Fastspring</li>
+<li>Product Marketing Manager at Paystand</li>
+<li>Marketing Consultant / Owner at DH Labs</li>
+<li>Marketing Director at Omnicom</li>
 </ul>
     </main>
   </div>
