--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <main>
       
 <h1 id="hi-there-i-m-eduardo">Hello, I'm Eduardo.</h1>
-<p><a href="https://linkedin.com/iam/eduardolopez">Marketing Executive</a> focused on B2B software startups. Currently the Head of Marketing at <a href="https://sardine.ai">Sardine</a>, a company that makes fraud prevention and compliance software. I help early stage startups build growth engines. Have worked in fintech/payments for a long time.</p>
+<p><a href="https://linkedin.com/iam/eduardolopez">Marketing Executive</a> focused on B2B software startups.</p>
+<p></p>Currently the Head of Marketing at <a href="https://sardine.ai">Sardine</a>, a company that makes fraud prevention and compliance software. I help early stage startups build growth engines. Have worked in fintech/payments for a long time.</p>
 <p>Previously co-founded two companies, led global marketing teams at Omnicom, and worked in behavior in behavior analytics.</p>
 <p>Have worked in fintech/payments for many years. Check out my <a href="https://fintechgtm.substack.com/">Fintech Explainers</a> newsletter if you want to learn more about that space.</p>
 <h2><strong>Work History:</strong></h2>
